# tf-bench

./: .gitignore  README.md  bench_dashboard.json  fetch_snapshot.sh  load_snapshot.sh  make_bench_dashboard.py  run_benchmark.sh  run_full_benchmark.sh
snapshots/2025.1.9_baseline/: workload_timestamps.json
snapshots/2025.1.9_baseline/prometheus_data/: scylla.txt
snapshots/2025.1.9_baseline/prometheus_data/wal/: 00000000  00000001
snapshots/2026.1.7_baseline/: workload_timestamps.json
snapshots/2026.1.7_baseline/prometheus_data/: scylla.txt
snapshots/2026.1.7_baseline/prometheus_data/wal/: 00000000  00000001
snapshots/2026.2.0_baseline/: workload_timestamps.json
snapshots/2026.2.0_baseline/prometheus_data/: scylla.txt
snapshots/2026.2.0_baseline/prometheus_data/wal/: 00000000  00000001
terraform/: main.tf  outputs.tf  variables.tf
terraform/user_data/: loader.sh.tpl  monitoring.sh.tpl  scylla.sh.tpl
workloads/: connect_storm  connect_storm.py  connect_storm.sh  run_benchmark.sh  workload.rn
workloads/connect_storm_rs/: Cargo.toml  main.rs
