[package]
name = "connect_storm"
version = "0.1.0"
edition = "2021"

# Dedicated high-rate CQL connection-storm generator for ScyllaDB, written in
# Rust on top of the async `scylla` driver + Tokio. Unlike the old
# thread-per-session Python tool (limited by the GIL to a few hundred new
# connections/second per loader), this can sustain many thousands of new CQL
# sessions/second on a single loader because each connect is a lightweight async
# task multiplexed over a small Tokio worker pool.

[[bin]]
name = "connect_storm"
path = "main.rs"

[dependencies]
scylla = "1.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }

# Optimize for a fast, small release binary built on the loader at provision time.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
